fix: header align

--- a/client/stylus/app.styl
+++ b/client/stylus/app.styl
@@ -123,7 +123,7 @@ h2, h3
     animation-timing-function ease-in-out
   header
     position fixed
-    left 24 * grid
+    left 207px
     right 0
     z-index onTop + 1
     top grid * 8.1
